MW4-15: Adjusted code for new service
